# slife

./: CMakeLists.txt  README.md  package.xml
config/: slife.yaml
include/lietorch/: algorithms.h  dual_quaternion.h  liegroup.h  pose.h  quaternion.h  rn.h  tangent.h
include/slife/: definitions.h  landscape.h  optimizer.h  optimizer.h.autosave  slife_handler.h  slife_handler.h.autosave  slife_node.h  synchronization.h  test.h
launch/: depth_camera.launch  slife.launch
scripts/: clock_diff.py  display_history.py  display_history_new.py  display_old.py  display_test_grid.py  pcl_index_test.py  save_pcl.py  scope.py  synth_pcl_node.py
src/: dual_quaternion.cpp  landscape.cpp  optimizer.cpp  optimizer.cpp.autosave  pose.cpp  quaternion.cpp  slife_handler.cpp  slife_handler.cpp.autosave  slife_node.cpp  synchronization.cpp
src/ctests/: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.eb66f1f  a.out  enable_if.cpp  enable_if.cpp.autosave  first_test_traits.cpp  incomplete_type.cpp  megatensor_diff.cpp  narf.cpp  param_pack.cpp  test_bind.cpp  test_cuda.cpp  test_idxes.cpp  test_idxes2.cpp  test_lietorch.cpp  test_max_nan.cpp  test_megatensor.cpp  test_pcl.cpp  test_pcl_lib.cpp  test_pinv.cpp  test_quat_ops.cpp  test_quaternion.cpp  test_queue.cpp  test_rn_tensor.cpp  test_scemo.cpp  test_sfinae.cpp  test_signal.cpp  test_template.cpp  test_tensor_init.cpp  test_timed.cpp  test_torch.cpp  undefined.cpp  undefined.h
src/ctests/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  ctests  test_lietorch
srv/: Cmd.srv
